# backendaudit-python-library

./: README.md  pyproject.toml  web_server.py
src/backend_audit/: __init__.py  cli.py  models.py  scanner.py
src/backend_audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/backend_audit/rules/: __init__.py  base.py  error_handling.py  rest_validation.py  security.py
src/backend_audit/utils/: ai.py  comments.py  entropy.py
src/backendaudit_python_library.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: app.js  styles.css
templates/: index.html
tests/: test_rules.py
tests/sample_apps/: fastapi_app.py  flask_app.py
